--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SunInstitute</string>
+    <string name="app_name">Sun International University</string>
     <string name="todo">TODO</string>
     <string name="login">Login</string>
     <string name="registration">Registration</string>
